--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
     <!-- Header Section -->
     <header>
-        <nav class="w-11/12 mx-auto">
-          <div class="navbar ">
-            <div class="navbar-start">
+        <nav class="navbar w-11/12 mx-auto">
+          <div class="navbar start">
+            
               
               <div class="flex items-center space-x-1 ">
                 <span class="ml-2 -rotate-45 rounded-full border-transparent btn btn-circle btn-outline bg-lime-400 text-white">
@@ -58,7 +58,7 @@
                 <a class="btn btn-ghost text-5xl font-bold">Rinterio</a>
               </div>
             </div>
-            <div class="navbar-center hidden lg:flex">
+            <div class=" navbar-center hidden lg:flex">
               <ul class="menu menu-horizontal px-1">
                 <li><a class="font-bold">Home</a></li>
                   <li><a>Services</a></li>
@@ -88,7 +88,7 @@
                 </div>
                 <ul
                   tabindex="0"
-                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 shadow">
+                  class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 p-2 shadow">
                   <li><a class="font-bold">Home</a></li>
                   <li><a>Services</a></li>
                   <li><a>Portfolio</a></li>
@@ -98,7 +98,33 @@
               </div>
             </div>
         </nav>
-    </header>
+
+    <!-- Banner Section Start-->
+        <section>
+          <div class=" lg:w-11/12 w-full  mx-auto text-center items-center justify-center sm:py-28 py-5">
+            <!-- img -->
+            <div class=" lg:w-4/12 w-9/12 px-1 mx-auto">
+              <img src="assets/banner.png" alt="">
+            </div>
+            <!-- text -->
+            <div class="py-10 w-full lg:w-11/12 mx-auto">
+              <h1 class="font-bold text-3xl lg:text-7xl">A barn house of this design has a 
+                <br>
+                striking appearance</h1>
+                <p class="lg:py-10  py-8 text-center items-center justify-center">The barn house captivates with its blend of rustic charm and modern sophistication, featuring weathered wood, sleek metal
+                  <br> accents, and large windows that flood the space with natural light.</p>
+                  <button class=" sm:w-80 items-center text-center btn rounded-full bg-lime-200 border-lime-400">
+                    <span class="font-bold text-4xl px-5 lg:text-xl">View Details</span>
+                    <span class="lg:ml-2 -rotate-45 rounded-full border-transparent p-2 justify-center text-center items-center btn-outline bg-lime-400">
+                      <i class="fa-solid fa-arrow-right">
+                      </i></span>
+                  </button>
+            </div>
+
+
+          </div>
+        </section>
+      </header>
 
     <!-- Main section -->
     <main></main>
