task session done

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                     </div>
                   </div>
                     <!-- 2nd part -->
-                    <div class="grid sm:flex-col  lg:grid-cols-8 gap-4 container p-4 mx-auto">
+                    <div class="grid sm:grid-cols-2 lg:grid-cols-8 gap-4 container p-4 mx-auto">
                       <!-- card 1 -->
                       <div class="flex col-span-2 border border-gray-200  p-4 rounded-xl ">
                         <div class="lg:w-[350px] lg:h-[179.3px]">
@@ -351,6 +351,33 @@
                       </div>
             
               </div>
+          </section>
+
+          <!-- Task section for me -->
+          <section class="pt-8 container mx-auto my-10 ">
+            <div class="join join-vertical w-11/12  bg-neutral-100">
+              <div class="collapse collapse-arrow join-item border-base-300 border">
+                <input type="radio" name="my-accordion-4" checked="checked" />
+                <div class="collapse-title text-xl font-semibold">What material is used to add a rustic touch to the barn house?</div>
+                <div class="collapse-content">
+                  <p>Weathered wood is used to add a rustic touch.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow join-item border-base-300 border">
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-semibold">How does the barn house design incorporate modern elements?</div>
+                <div class="collapse-content">
+                  <p>The design incorporates sleek metal accents for a modern look.</p>
+                </div>
+              </div>
+              <div class="collapse collapse-arrow join-item border-base-300 border">
+                <input type="radio" name="my-accordion-4" />
+                <div class="collapse-title text-xl font-semibold">What feature of the barn house design maximizes natural light?</div>
+                <div class="collapse-content">
+                  <p>Large windows maximize natural light in the barn house.</p>
+                </div>
+              </div>
+            </div>
           </section>
     </main>
 
