update some error

--- a/index.html
+++ b/index.html
@@ -250,9 +250,9 @@
 
                 <!-- grid card -->
                 <!-- 1st part -->
-                <div class="grid sm:grid-cols-2 lg:grid-cols-6 gap-4 container p-4 mx-auto">
+                <div class="grid sm:grid-cols-2 lg:grid-cols-5 gap-4 container p-4 mx-auto">
                   <!-- Card-1 -->
-                    <div class=" lg:flex col-span-4  gap-8 border border-gray-200  p-4 rounded-xl ">
+                    <div class=" lg:flex lg:col-span-3  gap-8 border border-gray-200  p-4 rounded-xl ">
                       <div class="lg:w-[460px] lg:h-[185.3px]">
                         <img class="h-[100%] w-[100%] " src="assets/img1.png" alt="">
                       </div>
@@ -270,25 +270,24 @@
                             </p>
                       </div>
                     </div>
-                   
-
                     <!-- Card-2 -->
-                    <div class="flex col-span-2 border border-gray-200  p-4 rounded-xl ">
-                      <div class="w-[450px] h-[210.3px]">
+                    <div class="lg:flex col-span-2 border border-gray-200  p-4 rounded-xl ">
+                      <div class="lg:w-[450px] lg:h-[210.3px]">
                         <img class="h-[100%] w-[100%]" src="assets/img2.png" alt="">
                       </div>
                     </div>
                   </div>
+
                     <!-- 2nd part -->
-                    <div class="grid sm:grid-cols-2 lg:grid-cols-8 gap-4 container p-4 mx-auto">
+                    <div class="grid sm:col-span-2 sm:grid-cols-2 lg:grid-cols-8 gap-4 container p-4 mx-auto">
                       <!-- card 1 -->
-                      <div class="flex col-span-2 border border-gray-200  p-4 rounded-xl ">
+                      <div class="lg:flex col-span-2  border border-gray-200  p-4 rounded-xl ">
                         <div class="lg:w-[350px] lg:h-[179.3px]">
                           <img class="h-[100%] w-[100%]" src="assets/img3.png" alt="">
                         </div>
                       </div>
                       <!-- 2nd card -->
-                      <div class=" lg:flex col-span-4  gap-8 border border-gray-200  p-4 rounded-xl ">
+                      <div class=" lg:flex lg:col-span-4  gap-8 border border-gray-200  p-4 rounded-xl ">
                         <div class="lg:w-[460px] lg:h-[185.3px]">
                           <img class="h-[100%] w-[100%] " src="assets/img4.png" alt="">
                         </div>
@@ -307,14 +306,14 @@
                         </div>
                       </div>
                       <!-- 3rd Card -->
-                      <div class="flex col-span-2 border border-gray-200  p-4 rounded-xl ">
+                      <div class="lg:flex col-span-2 border border-gray-200  p-4 rounded-xl ">
                         <div class="lg:w-[350px] lg:h-[179.3px]">
                           <img class="h-[100%] w-[100%]" src="assets/img5.png" alt="">
                         </div>
                       </div>
                       <!-- hidden Card -->
-                      <div class="lg:hidden flex  border border-gray-200  p-4 rounded-xl ">
-                        <div class="lg:w-[250px] lg:h-[179.3px]">
+                      <div class="lg:hidden  border border-gray-200  p-4 rounded-xl ">
+                        <div class="lg:w-[350px] lg:h-[179.3px]">
                           <img class="h-[100%] w-[100%]" src="assets/img5.png" alt="">
                         </div>
                       </div>
@@ -354,8 +353,8 @@
           </section>
 
           <!-- Task section for me -->
-          <section class="pt-8 container mx-auto my-10 ">
-            <div class="join join-vertical w-11/12  bg-neutral-100">
+          <section class="p-8 container mx-auto ">
+            <div class="join join-vertical text-center w-11/12 sm:w-full mx-auto sm:p-2 bg-neutral-100">
               <div class="collapse collapse-arrow join-item border-base-300 border">
                 <input type="radio" name="my-accordion-4" checked="checked" />
                 <div class="collapse-title text-xl font-semibold">What material is used to add a rustic touch to the barn house?</div>
@@ -393,7 +392,7 @@
             <br>
             featuring weathered wood, sleek metal accents.</p>
         </aside>
-        <nav class="grid grid-flow-col gap-4 text-white">
+        <nav class="grid grid-flow-col gap-x-4 text-white">
           <a class="link link-hover">Home</a>
           <a class="link link-hover">Services</a>
           <a class="link link-hover">Portfolio</a>
