--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
               </div>
               <ul
                 tabindex="0"
-                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 shadow">
+                class="menu right-0 menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 shadow">
                 <li class="font-bold"><a>Home</a></li>
                 <li><a>Services</a></li>
                 <li><a>Portfolio</a></li>
